# uuidme

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs  main.rs
