[package]
name = "uuidme"
version = "0.1.6"
authors = ["Martin R <23411718+RonquilloAeon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3.*"
uuid = { "version" = "0.8.*", features = ["v4"] }

[dev-dependencies]
regex = "1.4.*"
